# hypernova

./: README.md  hypernova_098dcee46fc7.html  install.sh  pyproject.toml
hypernova/: __init__.py  capture.py  engine.py  main.py  repl.py
hypernova.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
