[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hypernova"
version = "1.0.0"
description = "A CLI-based, fully interactive, fast HTTP brute-forcer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "requests>=2.28",
    "jinja2>=3.0",
]

[project.optional-dependencies]
capture = ["mitmproxy>=10.0"]

[project.scripts]
hypernova = "hypernova.main:main"

[tool.setuptools.packages.find]
include = ["hypernova*"]
